--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-reanimated": "~3.16.1",
+    "react-native-responsive-dimensions": "^3.1.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
